# hulvdan.github.io

./: .editorconfig  .pre-commit-config.yaml  build.py  index_template.html  main.py  pyproject.toml  style.css  tests.py
.nvim-personal/: setup.lua  shell-qt.bat  shell.bat  startup.lua
docs/: en.html  habits.html  index.html  internet.html  style-007503b5.css  style-13648417.css  style-1582d839.css  style-2ac9a953.css  style-2b199db0.css  style-3c27c3e2.css  style-58712855.css  style-6d65ca42.css  style-6d6f1616.css  style-ab25fbbd.css  style-ae4c7451.css  style-bf77c7e5.css
docs/assets/: fssort.ini
docs/razrabotyagi/: 01.html
docs/useful/: 01.html  02.html  03.html  04.html  05.html  06.html  _06.html  _07.html  _08.html
pages/: habits.md  index.md  internet.md
pages/razrabotyagi/: 01.md
pages/useful/: 01.md  02.md  02__run_on_save.md  03.md  03__folding.md  04.md  04__pre_commit.md  05.md  05__tests_on_save.md  06.md  06__record_replay_demo.md  _06__ahk_clip_studio_fast_export.md  _07__ahk_aseprite.md  _08__ahk_reaper_fast_export.md
