[project]
name = "hulvdan-github-io"
version = "0.1.0"
requires-python = ">=3.11.3"
dependencies = [
  "cogapp>=3.6.0",
  "livereload>=2.7.1",
  "markdown2>=2.5.5",
  "pillow>=12.1.1",
  "pygments>=2.19.2",
  "typer>=0.24.1",
]

[dependency-groups]
dev = [
  "pre-commit>=4.5.1",
]

[tool.black]
line-length = 90

[tool.isort]
multi_line_output = 3
line_length = 90
include_trailing_comma = true

[tool.uv.build-backend]
module-root = ""
