[project]
name = "hulvdan-github-io"
version = "0.1.0"
requires-python = ">=3.11.3"
dependencies = [
    "livereload>=2.7.1",
    "markdown2>=2.5.5",
    "pillow>=12.1.1",
]

[tool.uv.build-backend]
module-root = ""

[tool.black]
line-length = 90

[tool.isort]
multi_line_output = 3
line_length = 90
include_trailing_comma = true
